# Gecko

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/gecko/: __init__.py  cli.py
src/gecko/config/: __init__.py
src/gecko/core/: __init__.py
src/gecko/importers/: __init__.py
src/gecko/utils/: __init__.py
tests/: __init__.py  test_cli.py
